package com.structural.BridgePattern.exercise2;

public interface Sender {
     void sendMessage(String sub , String body);

}
